# LexCloud

./: set-fly-secrets.sh
backend/: .gitignore  Dockerfile  fly.toml  pyproject.toml  run_migrations.py  safe_migrate.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: database.py  main.py
backend/migrations/: 001_add_soft_delete_and_indexes.py
backend/tests/: test_database_config.py
frontend/: env  index.html  jest.config.cjs  package-lock.json  package.json
frontend/src/: App.tsx  setupTests.ts
frontend/src/components/: CaseForm.tsx  CaseSearch.tsx  Cases.tsx  ClientForm.tsx  Clients.tsx  CompensationLetterForm.tsx  CompensationLetters.tsx  Dashboard.tsx  ExecutionForm.tsx  Executions.tsx  Login.tsx  Settings.tsx  Sidebar.tsx
frontend/src/components/__tests__/: CaseForm.test.tsx  CompensationLetterForm.test.tsx  ExecutionForm.test.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx
frontend/src/hooks/: use-before-unload.ts  use-debounced-search.ts  use-form-autosave.ts  use-polling-fallback.ts  use-real-time-data.ts  use-websocket.ts
frontend/src/i18n/: translations.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts  jest.d.ts
ops/: backup.sh  restore.sh
ops/scripts/: daily_backup.sh  weekly_restore_test.sh
